# Oak

./: .gitignore  README.md  oak.py  oak_inspect.py  oak_stats.py  oak_sunburst.py  oak_tree.py  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-pr.yml
src/: configuration.py  draw.py  family.py  label.py  person.py  style.py  utils.py
src/config/: node_style_config.py  person_label_config.py  title_config.py
src/inspect/: check.py
src/stats/: __init__.py  configuration.py  evolution.py  repartition.py  transform.py
src/sunburst/: ancestor.py  descendant.py  sunburst.py
src/tree/: README.md  configuration.py  draw.py  label.py  node_config.py  title_config.py  trim.py
src/tree/configs/: edge_config.py  font_config.py  node_config.py  person_label_config.py  title_config.py  trim_config.py
src/tree_config/: configuration.py  edge_config.py  title_config.py
