[project]
name = "oak"
readme = "README.md"

version = "0.1.0"

requires-python = ">=3.10"

dependencies = [
  "matplotlib==3.10.1",
  "pandas==2.2.3",
  "plotly==6.3.1",
  "pycountry==24.6.1",
  "pydantic==2.12.3",
  "pygraphviz==1.14",
  "pyyaml==6.0.2",
  "seaborn==0.13.2",
]

optional-dependencies.dev = [
  "isort==6.0.1",
  "mypy==1.15.0",
  "ruff==0.11.5",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = ["build/*"]

[tool.ruff]
line-length = 120
lint.ignore = ["E701"]